change color and add rm

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ h2{
     width: 100%;
     font-size: 30px;
     cursor: pointer;
-    color: blue;
+    color: black;
 }
 h3{
     font-size: 30px;
